--- a/src/station7.html
+++ b/src/station7.html
@@ -1,1 +1,42 @@
 <!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" >
+    <meta property="og:url" content="localhost:3000" >
+    <meta property="og:image" content="./assets/image/railway-thumbnail.png" >
+    <meta property="og:title" content="station6" >
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@hig270">
+    <link rel="stylesheet" href="./assets/css/station7.css" type="text/css" />
+    <title>Station 3</title>
+  </head>
+  <body>
+    <main>
+      <header>header</header>
+      <div class="card">
+        <img
+          src="./assets/image/railway-thumbnail.png"
+          class="card__img-top"
+          alt="railway-image"
+        />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+      <div class="card">
+        <img
+          src="./assets/image/railway-thumbnail.png"
+          class="card__img-top"
+          alt="railway-image"
+        />
+        <p class="card__title">タイトル</p>
+        <p class="card__description">Joseph Solomon</p>
+        <p class="card__description">420 mil visualizações • há 1 ano</p>
+      </div>
+      <footer>footer</footer>
+    </main>
+  </body>
+</html>
